SERVER-55616 Throw on NotPrimaryError and ShutdownError categories in ShardingDDLCoordinator instances